--- a/style.css
+++ b/style.css
@@ -74,15 +74,19 @@
 	margin-bottom: -50px;
 }
 
-.navbar-toggler {
-	outline: none;
-	padding:0;
-	margin-top: 50px;
+.fa {
+	color: black;
 }
 
-.navbar-toggler .fa {
-	font-size: 30px;
-	/* curser:pointer; */
+.fa-facebook {
+	color: #3b5998;
+}
+.fa-instagram {
+	color: rgb(251, 57, 88); 
+} 
+
+.fa-pinterest {
+	color: #c8232c;
 }
 
 /*------Banner-------*/
@@ -139,6 +143,10 @@
 
 }
 
+.banner-title-responsive {
+	display:none;
+}
+
 /*--------Showcase------------*/
 
 .ao-dai-showcase {
@@ -192,7 +200,41 @@
 	width:43%;
 	transform: translateX(53%);
 }
+/* Custom CSS arrow */
+.arrow {
+	width:100px;
+	height:100px;
+	display:block;
+	position:relative;
+  }
+  
+  .stick1 {
+	display:block;
+	width:50px;
+	height:5px;
+	background-color: #ddd;
+	transform: rotate(45deg);
+	position: absolute;
+	top: 60px;
+	
+  }
+  
+  .stick2 {
+	display:block;
+	width:50px;
+	height:5px;
+	background-color: #ddd;
+	transform: rotate(-45deg);
+	position:absolute;
+	top:28px;
+  }
 
+.stick1 {
+	width:100px;
+	height:20px;
+	/* transform: rotate(45deg); */
+	background-color:yellow;
+}
 @keyframes previous {
   from {left:-5%;}
   to {left:-20%;}
@@ -536,12 +578,6 @@ h1.background span {
 		padding: 0 5vw;
 		order: 2;
 	}
-	/* .left-side {
-		width:100%;
-	}
-	.right-side {
-		width:100%;
-	} */
 }
 
 @media (max-width:768px){
@@ -551,15 +587,36 @@ h1.background span {
 	.article-image-2 {
 		height: 500px;
 	}
+
+	.banner-img {
+		width: 100%;
+		height:50%;
+		transform: translateX(0);
+		display:block;
+	}
+	/* Hide banner title in the image */
+	.banner-title {
+		display: none; 
+	}
+	/* Banner title responsive setup */
+	.banner-title-responsive {
+		display:block;
+		
+	}
+	.banner-title-responsive h1 {
+		font-size: 3em;
+		color: #fff;
+		margin-bottom: 2vh; 
+		padding: 0px 10px 0 10px;
+		background: var(--pink-color);
+	}
+	.banner-title-responsive h2 {
+		font-size: .75em;
+		color: black;
+		padding: 0px 10px 0 10px;
+		margin-left:10vw;
+	}
+	
 }
 
 
-
-/*---article-text: read more read less fix --- */
-.more {
-	display: none;
-}
-
-button:focus {
-	outline:none
-}
